# snake-adding-unit-tests-to-legacy-code

./: .gitignore
app/: CMakeLists.txt
app/src/: Makefile  snake.c  snake.h
app/src/conio/: conio.h
app/test/: snake_test.cpp
app/test/mock/: conio.h
